@@ -17,41 +17,6 @@ class ContentModel extends Model
 	}
 
 	/**
-	 * Function to get all primary subjects (no duplicates)
-	 * 
-	 * @return array $primarySubjects
-	 */
-	private function getPrimarySubjects() : array
-	{
-		$dbConn = openDBConnection();
-		$dbOutput = [];
-		$primarySubjects = [];
-
-		try
-		{
-			// Getting all primary and secondary subjects
-			$stmt = $dbConn->prepare("SELECT DISTINCT(`PrimarySubject`) FROM `posts`");
-			$stmt->execute();
-			$dbOutput = $stmt->fetchAll();
-		}
-		catch (PDOException $e)
-		{
-			throw new DBException($e->getMessage());
-			
-		}	
-
-		closeDBConnection($conn);
-
-		// Since the db output contains of arrays containing the primarysubject we're taking that apart real quick
-		for ($i = 0; $i < count($dbOutput); $i++) 
-		{
-			array_push($primarySubjects, $dbOutput[$i][0]);
-		}
-
-		return $primarySubjects;
-	}
-
-	/**
 	 * Function to get all subjects (Key = primarySubject, value = array of secondary subjects)
 	 * 
 	 * @return array $subjects (key = primarySubject, value = array containing secondary subjects)
@@ -73,43 +38,6 @@ class ContentModel extends Model
 		}
 
 		return $subjects;
-	}
-
-	/**
-	 * Function to get all secondarySubjects
-	 * 
-	 * @param $primarySubjects for which to get the secondarysubjects
-	 * @return array containing all secondarySubjects for the given primary.
-	 */
-	private function getSecondarySubjects($primarySubject) : array
-	{
-		$dbConn = openDBConnection();
-		$dbOutput = [];	
-		
-		try
-		{
-			// Getting all secondary subjects for the current primary subject
-			$stmt = $dbConn->prepare("SELECT SecondarySubject FROM subjects WHERE PrimarySubject = ?");
-			$stmt->execute([$primarySubject]);
-			$dbOutput = $stmt->fetchAll();
-		}
-		catch (PDOException $e)
-		{
-			throw new DBException($e->getMessage());
-		}	
-
-		closeDBConnection($conn);
-
-		$secondarySubjects = [];
-
-		// Since the db output contains of array containing the secondarysubject(s) we unpack them here.
-		for ($i = 0; $i < count($dbOutput); $i++) 
-		{
-			array_push($secondarySubjects, $dbOutput[$i][0]);
-		}
-
-		return $secondarySubjects;
-
 	}
 }
 
