@@ -62,5 +62,76 @@ abstract class Model
 		$returnVal = !isset($_POST["username"]) ? true : false;
 		return $returnVal;
 	}
+
+	/**
+	 * Function to get all primary subjects (no duplicates)
+	 * 
+	 * @return array $primarySubjects
+	 */
+	protected function getPrimarySubjects() : array
+	{
+		$dbConn = openDBConnection();
+		$dbOutput = [];
+		$primarySubjects = [];
+
+		try
+		{
+			// Getting all primary and secondary subjects
+			$stmt = $dbConn->prepare("SELECT DISTINCT(`PrimarySubject`) FROM `posts`");
+			$stmt->execute();
+			$dbOutput = $stmt->fetchAll();
+		}
+		catch (PDOException $e)
+		{
+			throw new DBException($e->getMessage());
+			
+		}	
+
+		closeDBConnection($conn);
+
+		// Since the db output contains of arrays containing the primarysubject we're taking that apart real quick
+		for ($i = 0; $i < count($dbOutput); $i++) 
+		{
+			array_push($primarySubjects, $dbOutput[$i][0]);
+		}
+
+		return $primarySubjects;
+	}
+
+	/**
+	 * Function to get all secondarySubjects
+	 * 
+	 * @param $primarySubjects for which to get the secondarysubjects
+	 * @return array containing all secondarySubjects for the given primary.
+	 */
+	protected function getSecondarySubjects($primarySubject) : array
+	{
+		$dbConn = openDBConnection();
+		$dbOutput = [];	
+		
+		try
+		{
+			// Getting all secondary subjects for the current primary subject
+			$stmt = $dbConn->prepare("SELECT SecondarySubject FROM subjects WHERE PrimarySubject = ?");
+			$stmt->execute([$primarySubject]);
+			$dbOutput = $stmt->fetchAll();
+		}
+		catch (PDOException $e)
+		{
+			throw new DBException($e->getMessage());
+		}	
+
+		closeDBConnection($conn);
+
+		$secondarySubjects = [];
+
+		// Since the db output contains of array containing the secondarysubject(s) we unpack them here.
+		for ($i = 0; $i < count($dbOutput); $i++) 
+		{
+			array_push($secondarySubjects, $dbOutput[$i][0]);
+		}
+
+		return $secondarySubjects;
+	}
 }
 ?>
