@@ -32,41 +32,6 @@ class PrimarySubjectModel extends Model
 		return $returnData;
 	}
 
-	/**
-	 * Function gets all the secondary subjects which fall under the given primary subject
-	 * 
-	 * @param primary subject
-	 * @return array containing all secondary subjects
-	 */
-	private function getSecondarySubjects($subject) 
-	{
-		$dbConn = openDBConnection();
-		$dbOutput = [];
-		$secondarySubjects = [];
-
-		try 
-		{
-			$stmt = $dbConn->prepare("SELECT * FROM subjects WHERE PrimarySubject = ?");
-			$stmt->execute([$subject]);
-			$dbOutput =	 $stmt->fetchAll();
-		}
-		catch (PDOException $e) 
-		{
-			throw new DBException($e->getMessage());
-		}
-
-		closeDBConnection($dbConn);
-
-		// Since the db output is a nested loop we have to filter out the stuff we dont need 
-		for ($i = 0; $i < count($dbOutput); $i++) 
-		{
-			$currArray = $dbOutput[$i];
-			array_push($secondarySubjects, $currArray["SecondarySubject"]);
-		}
-
-		return $secondarySubjects;
-	}
-
 	private function getPreviewPosts(array $secondarySubjects) : array
 	{
 		// Will return a 3 level deep array. level 1 = secondary subjects, level 2 = posts (index), level 3 = postinfo (name title etc)
